<resources>
    <string name="app_name">n-Back Memory Training</string>
    <string name="main_start">Start</string>
    <string name="main_config">Configuration</string>
    <string name="main_stats">Stats</string>

    <string name="config_title">Configuration</string>
    <string name="config_item_revert_changes">Revert changes</string>
    <string name="config_item_save">Save</string>
    <string name="config_item_reset_to_default">Reset to default</string>

    <string name="game_back_dialog_title">Return to main menu</string>
    <string name="game_back_dialog_yes">Yes</string>
    <string name="game_back_dialog_no">No</string>
    <string name="game_next">Next</string>

    <string name="numpad_one">1</string>
    <string name="numpad_two">2</string>
    <string name="numpad_three">3</string>
    <string name="numpad_four">4</string>
    <string name="numpad_five">5</string>
    <string name="numpad_six">6</string>
    <string name="numpad_seven">7</string>
    <string name="numpad_eight">8</string>
    <string name="numpad_nine">9</string>

    <string name="score_label_n">n:</string>
    <string name="score_label_correct">Correct:</string>
    <string name="score_label_percent">Portion:</string>
    <string name="score_label_score">Score:</string>
    <string name="score_label_best_today">Best score today:</string>
    <string name="score_label_best">Best score:</string>
    <string name="score_replay">Replay</string>
    <string name="score_menu">Menu</string>

    <string name="toast_saved">Saved</string>
    <string name="toast_save_failed">Save failed</string>
    <string name="toast_reset_to_default">Reset Configuration</string>
    <string name="toast_revert_changes">Changes reverted</string>

    <string name="game_configuration">Exercise Configurations</string>
    <string name="pref_n_title">Answer offset</string>
    <string name="pref_n_summary">Provide answer solutions with an offset of {} expressions</string>

    <string name="pref_end_condition_title">End condition</string>
    <string name="pref_end_condition_expression">Expression</string>
    <string name="pref_end_condition_time">Time</string>
    <string name="pref_end_condition_summary">Exercise ends on {} limit</string>

    <string name="pref_time_limit_title">Time Limit</string>
    <string name="pref_time_limit_summary">Exercise ends after {}</string>

    <string name="pref_expression_limit_title">Expression Limit</string>
    <string name="pref_expression_limit_summary">Exercise ends after {} expressions</string>

    <string name="stats_list">Exercises</string>
    <string name="stats_graph">Performance Graph</string>
    <string name="stats_graph_no_data">No exercises available</string>
    <string name="stats_sortby">Sort by:</string>
    <string name="stats_list_n">n = </string>
    <string name="stats_this_week">Week</string>
    <string name="stats_this_month">Month</string>
    <string name="stats_this_year">Year</string>

    <string-array name="stats_sortby_values">
        <item>Date</item>
        <item>Score</item>
    </string-array>

    <string name="placeholder_state">1/5</string>
    <string name="placeholder_expression">1 + 5</string>
</resources>
