<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/game_configuration">
        <EditTextPreference
            app:key="n"
            app:title="@string/pref_n_title"
            app:defaultValue="1"
            app:persistent="true"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="end_condition"
            app:title="@string/pref_end_condition_title"
            app:defaultValue="expression"
            app:entries="@array/end_condition_entries"
            app:entryValues="@array/end_condition_values"
            app:persistent="true"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_limit"
            app:title="@string/pref_time_limit_title"
            app:defaultValue="01:30"
            app:persistent="true"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="expression_limit"
            app:title="@string/pref_expression_limit_title"
            app:defaultValue="10"
            app:persistent="true"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
