<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/main_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickStart"
        android:text="@string/main_start"
        app:layout_constraintBottom_toTopOf="@+id/main_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/main_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickConfig"
        android:text="@string/main_config"
        app:layout_constraintBottom_toTopOf="@+id/main_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_start" />

    <Button
        android:id="@+id/main_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_config" />
</androidx.constraintlayout.widget.ConstraintLayout>