<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/score_label_n"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/score_label_n"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/score_label_correct"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintEnd_toStartOf="@id/score_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/score_n"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/score_label_n"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_label_correct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/score_label_correct"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintTop_toBottomOf="@id/score_label_n"/>

    <TextView
        android:id="@+id/score_correct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/score_label_correct"
        app:layout_constraintEnd_toEndOf="@id/score_n"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_correct"/>

    <TextView
        android:id="@+id/score_label_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/score_label_percent"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintTop_toBottomOf="@id/score_label_correct"/>

    <TextView
        android:id="@+id/score_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/score_label_percent"
        app:layout_constraintEnd_toEndOf="@id/score_n"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_percent"/>

    <TextView
        android:id="@+id/score_label_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/score_label_score"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintTop_toBottomOf="@id/score_label_percent"/>

    <TextView
        android:id="@+id/score_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/score_label_score"
        app:layout_constraintEnd_toEndOf="@id/score_n"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_score"/>

    <TextView
        android:id="@+id/score_label_best_today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/score_label_best_today"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintTop_toBottomOf="@id/score_label_score"/>

    <TextView
        android:id="@+id/score_best_today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/score_label_best_today"
        app:layout_constraintEnd_toEndOf="@id/score_n"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_best_today"/>

    <TextView
        android:id="@+id/score_label_best"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/score_label_best"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/score_label_n"
        app:layout_constraintEnd_toEndOf="@id/score_label_best"
        app:layout_constraintEnd_toStartOf="@id/score_n"
        app:layout_constraintTop_toBottomOf="@id/score_label_best_today"/>

    <TextView
        android:id="@+id/score_best"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/score_label_best"
        app:layout_constraintEnd_toEndOf="@id/score_n"
        app:layout_constraintBaseline_toBaselineOf="@id/score_label_best"/>

    <Button
        android:id="@+id/score_replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_replay"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="onClickReplay"
        app:layout_constraintBottom_toTopOf="@id/score_menu"/>

    <Button
        android:id="@+id/score_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score_menu"
        android:layout_marginBottom="40dp"
        android:onClick="onClickMenu"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/score_replay"
        app:layout_constraintEnd_toEndOf="@id/score_replay"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>