<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="5dp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/stats_time_span_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        app:checkedButton="@id/stats_graph_week"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stats_graph_week"
            style="?materialButtonOutlinedStyle"
            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stats_this_week" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stats_graph_month"
            style="?materialButtonOutlinedStyle"
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_this_month" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stats_graph_year"
            style="?materialButtonOutlinedStyle"
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_this_year" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>